--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
+"paths": {
+      "@/*": ["./*"]  // This maps '@/...' to the root directory
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/Testing-var/page.jsx"],
