--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.7.7",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
